@@ -1,24 +1,27 @@
 package es.uclm.delivery.persistencia;
 
 import es.uclm.delivery.dominio.entidades.Repartidor;
-import org.junit.jupiter.api.*;
-import org.mockito.*;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
 import jakarta.persistence.EntityManager;
-import jakarta.persistence.Query;
 import jakarta.persistence.TypedQuery;
+import jakarta.persistence.Query;
 
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 
 class RepartidorDAOTest {
 
-    private static final Long REPARTIDOR_ID = 1L;
-    private static final String USERNAME_EXISTENTE = "repartidor1";
-    private static final String USERNAME_INEXISTENTE = "usuarioInexistente";
-
+    @InjectMocks
     private RepartidorDAO repartidorDAO;
 
     @Mock
@@ -30,29 +33,23 @@ class RepartidorDAOTest {
         repartidorDAO = new RepartidorDAO();
 
         // Inyectar mockEntityManager usando reflexión
-        java.lang.reflect.Field entityManagerField = RepartidorDAO.class.getDeclaredField("entityManager");
+        java.lang.reflect.Field entityManagerField = RepartidorDAO.class.getDeclaredField("repartidorEntityManager");
         entityManagerField.setAccessible(true);
         entityManagerField.set(repartidorDAO, mockEntityManager);
     }
 
     private Repartidor crearRepartidor() {
-        Repartidor repartidor = new Repartidor();
-        repartidor.setId(REPARTIDOR_ID);
-        return repartidor;
+        return new Repartidor();
     }
 
-    private TypedQuery<Repartidor> crearMockTypedQuery() {
+    private TypedQuery<Repartidor> crearMockQuery() {
         return mock(TypedQuery.class);
     }
 
-    private Query crearMockQuery() {
-        return mock(Query.class);
-    }
-
     @Test
-    void testFindAllIds_ExistenRepartidores() {
-        List<Long> ids = Arrays.asList(1L, 2L, 3L);
-        Query mockQuery = crearMockQuery();
+    void testFindAllIds() {
+        List<Long> ids = List.of(1L, 2L, 3L);
+        Query mockQuery = mock(Query.class);
         when(mockEntityManager.createNativeQuery(anyString())).thenReturn(mockQuery);
         when(mockQuery.getResultList()).thenReturn(ids);
 
@@ -60,49 +57,37 @@ class RepartidorDAOTest {
 
         assertNotNull(result);
         assertEquals(3, result.size());
-        assertTrue(result.contains(1L));
+        assertEquals(ids, result);
     }
 
     @Test
-    void testFindAllIds_NoExistenRepartidores() {
-        Query mockQuery = crearMockQuery();
-        when(mockEntityManager.createNativeQuery(anyString())).thenReturn(mockQuery);
-        when(mockQuery.getResultList()).thenReturn(Collections.emptyList());
-
-        List<Long> result = repartidorDAO.findAllIds();
-
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
-    }
-
-    @Test
-    void testFindByUsername_UsuarioExistente() {
+    void testFindByUsername_UsernameValido() {
         Repartidor repartidor = crearRepartidor();
-        TypedQuery<Repartidor> mockQuery = crearMockTypedQuery();
+        TypedQuery<Repartidor> mockQuery = crearMockQuery();
         when(mockEntityManager.createQuery(anyString(), eq(Repartidor.class))).thenReturn(mockQuery);
-        when(mockQuery.setParameter(eq("username"), anyString())).thenReturn(mockQuery);
-        when(mockQuery.getResultList()).thenReturn(Collections.singletonList(repartidor));
+        when(mockQuery.setParameter(anyString(), any())).thenReturn(mockQuery);
+        when(mockQuery.getResultList()).thenReturn(List.of(repartidor));
 
-        Optional<Repartidor> result = repartidorDAO.findByUsername(USERNAME_EXISTENTE);
+        Optional<Repartidor> result = repartidorDAO.findByUsername("username");
 
         assertTrue(result.isPresent());
-        assertEquals(REPARTIDOR_ID, result.get().getId());
+        assertEquals(repartidor, result.get());
     }
 
     @Test
-    void testFindByUsername_UsuarioNoExistente() {
-        TypedQuery<Repartidor> mockQuery = crearMockTypedQuery();
+    void testFindByUsername_UsernameInvalido() {
+        TypedQuery<Repartidor> mockQuery = crearMockQuery();
         when(mockEntityManager.createQuery(anyString(), eq(Repartidor.class))).thenReturn(mockQuery);
-        when(mockQuery.setParameter(eq("username"), anyString())).thenReturn(mockQuery);
+        when(mockQuery.setParameter(anyString(), any())).thenReturn(mockQuery);
         when(mockQuery.getResultList()).thenReturn(Collections.emptyList());
 
-        Optional<Repartidor> result = repartidorDAO.findByUsername(USERNAME_INEXISTENTE);
+        Optional<Repartidor> result = repartidorDAO.findByUsername("username");
 
         assertFalse(result.isPresent());
     }
 
     @Test
-    void testFindByUsername_ParametroNulo() {
+    void testFindByUsername_UsernameEsNulo() {
         assertThrows(IllegalArgumentException.class, () -> repartidorDAO.findByUsername(null));
     }
 }
